Move /seq_app_backend to /seq_app_front to generate /dist inside server

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # dependencies
-/seq_app_backend/node_modules
 /seq_app_front/node_modules
-/seq_app_backend/.env
 /seq_app_front/.env
-/seq_app_backend/dist
-/seq_app_front/dist
+seq_app_front/seq_app_backend/node_modules
+seq_app_front/seq_app_backend/.env
+seq_app_front/seq_app_backend/dist
