--- a/seq_app_front/package.json
+++ b/seq_app_front/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
+    "dev": "webpack-dev-server --mode development --open",
     "build": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
