--- a/seq_app_front/seq_app_backend/package.json
+++ b/seq_app_front/seq_app_backend/package.json
@@ -4,14 +4,22 @@
   "description": "Backend for the Sequencer Interation Application (Mars Project Airbus 2021)",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon App.js"
+    "start": "nodemon index.js"
   },
   "author": "SOULARD Cédric",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "amqplib": "^0.8.0",
+    "config": "^3.3.7",
     "express": "^4.17.1",
+    "mongodb": "^4.7.0",
     "nodemon": "^2.0.14",
     "socket.io": "^4.2.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.17.10",
+    "@babel/register": "^7.17.7",
+    "babel-core": "^6.26.3"
   }
 }
